@@ -25,6 +25,8 @@
           <target>21</target>
           <compilerArgs>
             <arg>--enable-preview</arg>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.vector</arg>
           </compilerArgs>
         </configuration>
       </plugin>
